[package]
name = "core"
version = "0.1.0"
edition = "2021"
description = "A lightweight server core for Rust"
categories = ["http-server"]
keywords = ["core", "server", "http", "minimalist", "lightweight"]
authors = ["Ando <iamando@tuta.io>"]
license = "MIT"
repository = "https://github.com/exprust/core"

[lib]
name = "core"
path = "src/lib.rs"

[dependencies]
